<resources>
    <string name="app_name">Noter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_word">Add</string>
    <string name="no_word">No Note</string>

    <string name="hint_word">Note...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Note not saved because it is empty.</string>
    <string name="empty_notes">There aren\'t any notes yet!</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="notes">Notes</string>
    <string name="action_bar_heading">Noter</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="edit">EDIT</string>
    <string name="edit_note_heading">Edit Note</string>
    <string name="add_new_note">Add new note</string>
</resources>
